Set up some html with css identifiers matching given css

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ textarea{
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: #c941eb;
   color: #000000;
   border-top: 1px dashed #000000;
 }
