--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ textarea{
 }
 
 .hour {
-  background-color: #c941eb;
+  background-color: #bb83c9;
   color: #000000;
   border-top: 1px dashed #000000;
 }
@@ -48,12 +48,12 @@ textarea{
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: #e7b4e9;
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: #b4e0c6;
   color: white;
 }
 
@@ -61,7 +61,7 @@ textarea{
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color: #7dcadb;
   color: white;
 }
 
