--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Monaco', sans-serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -39,7 +39,7 @@ textarea{
 .hour {
   background-color: #bb83c9;
   color: #000000;
-  border-top: 1px dashed #000000;
+  border-top: 1px solid #000000;
 }
 
 .past {
@@ -53,7 +53,7 @@ textarea{
 }
 
 .future {
-  background-color: #b4e0c6;
+  background-color: #bceed1;
   color: white;
 }
 
